fixed cronjob version

--- a/matomo.yaml
+++ b/matomo.yaml
@@ -246,7 +246,7 @@ objects:
     wildcardPolicy: None
     tls:
       termination: edge
-- apiVersion: batch/v2alpha1
+- apiVersion: batch/v1beta1
   kind: CronJob
   metadata:
     name: matomo
